# todoapp-fastapi-database

./: database.py  main.py  pyproject.toml
Database Scripts/: PostgreSQLScript.sql
routers/: admin.py  todos.py  users.py
