[project]
name = "fastapi-the-complete-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Faysal, Sheikh",email = "u1175660@internal.imsglobal.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt (==4.0.1)",
    "cryptography (>=44.0.3,<45.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
